Changed Form File And Added Break to Form

--- a/Bold_latic_Using.html
+++ b/Bold_latic_Using.html
@@ -6,7 +6,7 @@
   <title>How To Bold And Italic In Html</title>
 </head>
 <body>
-  <p>Hello My Name Is <em> Shubham </em>. <b>Hello My Name Is Shubham.With Bold</b></p>
-
+  <p>This &rarr; Hello My Name Is <em> Shubham </em>. <b>Hello My Name Is Shubham.With Bold</b></p>
+  <p>Hello My Name Is <i> Shubham </i>. <strong>Hello My Name Is Shubham.With Bold</strong></p>
 </body>
 </html>
