--- a/Form.html
+++ b/Form.html
@@ -6,9 +6,13 @@
 <body>
   <form>
     <lable for="UserName">UserName:</lable>
-    <input type="Text" id="UserName" name="UserName" ><br>
+    <br>
+    <input type="Text" id="UserName" name="UserName" placeholder="Username" />
+    <br>
     <lable for="Password">Password:</lable>
-    <input type="Text" id="Password" name="Password" ><br>
+    <br>
+    <input type="Text" id="Password" name="Password" placeholder="Password" >
+    <br>
     <input type="Submit" value="Login" >
 
   </form>
